# jennifer-position-plugin

hexapod/: CMakeLists.txt  package.xml
hexapod/launch/: spawn_sdf_robotdesc.launch
hexapod/scripts/: move_hexapod.py
hexapod/sdf/: model.config
hexapod/src/: pexod_plugin.cc
